fix search button alignment

--- a/plugins/styled-bars/style.css
+++ b/plugins/styled-bars/style.css
@@ -9,7 +9,7 @@ ytmusic-app-layout {
 }
 
 ytmusic-search-box.ytmusic-nav-bar {
-	margin-top: 25px;
+	margin-top: 30px;
 }
 
 .center-content.ytmusic-nav-bar {
